Add sunday videos

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -263,7 +263,21 @@
                         stretching to prevent your muscles from getting too stiff and sore.</p>
                     <p>It's OK to take a complete rest day, too. Both active and relaxed days off have a place in our
                         weekly routine, whether that's reading a book on the couch or catching up on Netflix. What
-                        matters most is that you listen to your body.</p>
+                        matters most is that you listen to your body.
+                    </p>
+                    <div class="sunday-videos">
+                        <div class="workout-vid">
+                            <video src="assets/videos/sunday/stretching.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p>
+                            </video>
+                            <p>A form of stretching</p>
+                            <div class="workout-vid">
+                                <video src="assets/videos/sunday/yoga.mp4" controls autoplay muted loop>
+                                    <p>Your browser doesn't support HTML5 video.</p>
+                                </video>
+                                <p>Yoga</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </Section>
