Add shoulder press video

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -253,6 +253,12 @@
                             </video>
                             <p>Lateral raise</p>
                         </div>
+                        <div class="workout-vid">
+                            <video src="assets/videos/saturday/shoulder-press.mp4" controls muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p>
+                            </video>
+                            <p>Shoulder Press</p>
+                        </div>
                     </div>
                 </div>
                 <hr>
