Corrected sunday videos divs

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -277,11 +277,12 @@
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>A form of stretching</p>
-                            <div class="workout-vid">
-                                <video src="assets/videos/sunday/yoga.mp4" controls autoplay muted loop>
-                                    <p>Your browser doesn't support HTML5 video.</p>
-                                </video>
-                                <p>Yoga</p>
+                        </div>
+                        <div class="workout-vid">
+                            <video src="assets/videos/sunday/yoga.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p>
+                            </video>
+                            <p>Yoga</p>
                         </div>
                     </div>
                 </div>
