Add table icons

--- a/meal-preps.html
+++ b/meal-preps.html
@@ -59,11 +59,11 @@
                     <caption>8 Healthy and Effective Diets</caption>
 
                     <tr>
-                        <th>Day</th>
-                        <th>Breatfast</th>
-                        <th>Lunch</th>
-                        <th>Evening Meal</th>
-                        <th>Snacks</th>
+                        <th>Day  <i class="fa-solid fa-calendar-days"></i></th>
+                        <th>Breatfast  <i class="fa-solid fa-mug-saucer"></i></th>
+                        <th>Lunch  <i class="fa-solid fa-utensils"></i></th>
+                        <th>Evening Meal  <i class="fa-solid fa-bowl-food"></i></th>
+                        <th>Snacks <i class="fa-solid fa-cookie-bite"></i></th>
                     </tr>
                     <tr>
                         <td>Monday</td>
