--- a/sign-up.html
+++ b/sign-up.html
@@ -114,7 +114,7 @@
                     </div>
                     <br>
                     <div class="send-clear-buttons">
-                        <button type="submit" target="_blank" >Send</button>
+                        <button type="submit">Send</button>
                         <button type="reset">Clear</button>
                     </div>
                 </div>
