--- a/workout-routines.html
+++ b/workout-routines.html
@@ -103,25 +103,25 @@
                     </ul>
                     <div class="tuesday-videos">
                         <div class="workout-vid">
-                            <video src="assets/videos/tuesday/deadlift.mp4" controls muted loop>
+                            <video src="assets/videos/tuesday/deadlift.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Deadlifts</p>
                         </div>
                         <div class="workout-vid">
-                            <video src="assets/videos/tuesday/hip-thrusts.mp4" controls muted loop>
+                            <video src="assets/videos/tuesday/hip-thrusts.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Hip thrusts</p>
                         </div>
                         <div class="workout-vid">
-                            <video src="assets/videos/tuesday/lunges.mp4" controls muted loop>
+                            <video src="assets/videos/tuesday/lunges.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Lunges</p>
                         </div>
                         <div class="workout-vid">
-                            <video src="assets/videos/tuesday/squats.mp4" controls muted loop>
+                            <video src="assets/videos/tuesday/squats.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Squats</p>
@@ -149,19 +149,19 @@
                     </ul>
                     <div class="wednesday-videos">
                         <div class="workout-vid">
-                            <video src="assets/videos/wednesday/bicep-curl.mp4" controls muted loop>
+                            <video src="assets/videos/wednesday/bicep-curl.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Bicep Curl</p>
                         </div>
                         <div class="workout-vid">
-                            <video src="assets/videos/wednesday/chest-press.mp4" controls muted loop>
+                            <video src="assets/videos/wednesday/chest-press.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Chest Press</p>
                         </div>
                         <div class="workout-vid">
-                            <video src="assets/videos/wednesday/tricep-dip.mp4" controls muted loop>
+                            <video src="assets/videos/wednesday/tricep-dip.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Chest Press</p>
@@ -236,25 +236,25 @@
                     </ul>
                     <div class="saturday-videos">
                         <div class="workout-vid">
-                            <video src="assets/videos/saturday/dumbbell-single-arm-row.mp4" controls muted loop>
+                            <video src="assets/videos/saturday/dumbbell-single-arm-row.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Dumbbell Single arm row</p>
                         </div>
                         <div class="workout-vid">
-                            <video src="assets/videos/saturday/lat-pull-down.mp4" controls muted loop>
+                            <video src="assets/videos/saturday/lat-pull-down.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Lat Pull down</p>
                         </div>
                         <div class="workout-vid">
-                            <video src="assets/videos/saturday/lateral-raise.mp4" controls muted loop>
+                            <video src="assets/videos/saturday/lateral-raise.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Lateral raise</p>
                         </div>
                         <div class="workout-vid">
-                            <video src="assets/videos/saturday/shoulder-press.mp4" controls muted loop>
+                            <video src="assets/videos/saturday/shoulder-press.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Shoulder Press</p>
