--- a/responsive.html
+++ b/responsive.html
@@ -43,7 +43,7 @@
     <!--Main Content-->
     <main>      
           <div class="responsive-content">
-            <img src="assets/images/thank_you.webp" alt="Thank you image." width="500px">
+            <img src="assets/images/thank_you.webp" alt="Thank you image.">
             <br>
           <p>Thank you for signing up</p>
           <br>
