Manually format code to make it easy to read

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -236,7 +236,8 @@
                     </ul>
                     <div class="saturday-videos">
                         <div class="workout-vid">
-                            <video src="assets/videos/saturday/dumbbell-single-arm-row.mp4" controls autoplay muted loop>
+                            <video src="assets/videos/saturday/dumbbell-single-arm-row.mp4" controls autoplay muted
+                                loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Dumbbell Single arm row</p>
