Manually format code to make it easy to read

--- a/meal-preps.html
+++ b/meal-preps.html
@@ -42,8 +42,10 @@
 
     <!--Main Content-->
     <main>
+
         <section class="meal-preps">
             <h5 class="hide">Hidden</h5>
+
             <section>
                 <h2>7 days of healthy meals on a budget</h2><br>
                 <p>Eating well is an important part of a healthy lifestyle. Consuming a balanced mix of nutritious foods
@@ -53,6 +55,7 @@
                     We’ve planned a week of meals that will give you a balanced, heart-healthy diet whilst helping you
                     to control your spending. Amounts given are per person.</p><br>
             </section>
+
             <section class="meal-prep-table">
                 <h5 class="hide">Hidden</h5>
                 <table>
@@ -127,29 +130,33 @@
                     </tr>
                 </table>
             </section>
+
         </section>
+
     </main>
 
     <!--Footer-->
     <footer>
         <p>"If it doesn't challenge you, it doesn't change you." <strong>FRED_DEVITO</strong></p>
+
         <section class="social-media">
             <h5 class="hide">Hidden</h5>
             <p>Follow Us</p>
+
             <ul class="social-networks">
-                <li><a href="https://x.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+                <li>
+                    <a href="https://x.com/" target="_blank" rel="noopener" aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
                 </li>
-                <li><a href="https://wwww.facebook.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our Facebook page (opens in a new tab)"><i
-                            class="fa-brands fa-facebook"></i></a>
+                <li>
+                    <a href="https://wwww.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
                 </li>
-                <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our instagram page (opens in a new tab)"><i
-                            class="fa-brands fa-instagram"></i></a>
+                <li>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
                 </li>
             </ul>
+            
         </section>
+
     </footer>
 
     <!-- Font Awesome kit -->
