Manually format code to make it easy to read

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -42,7 +42,9 @@
 
     <!--Main Content-->
     <main>
+
         <Section class="workout-routines">
+
             <div>
                 <h2>Effective weekly workout routine</h2>
                 <p>You'll want to find a well-balanced workout routine you can stick to to reap the benefits of physical
@@ -56,6 +58,7 @@
                     your goals and get started.</p>
                 <hr>
             </div>
+
             <div class="weekdays">
                 <div class="monday">
                     <h3>Monday:</h3>
@@ -73,6 +76,7 @@
                         will become easier over time, so you'll want to</p>
                 </div>
                 <hr>
+
                 <div class="tuesday">
                     <h3>Tuesday:</h3>
                     <h4>Lower body</h4>
@@ -101,33 +105,41 @@
                             shoulder-width apart
                             and your feet flat on the floor. Push back up to standing.</li>
                     </ul>
+
                     <div class="tuesday-videos">
+
                         <div class="workout-vid">
                             <video src="assets/videos/tuesday/deadlift.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Deadlifts</p>
                         </div>
+
                         <div class="workout-vid">
                             <video src="assets/videos/tuesday/hip-thrusts.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Hip thrusts</p>
                         </div>
+
                         <div class="workout-vid">
                             <video src="assets/videos/tuesday/lunges.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Lunges</p>
                         </div>
+
                         <div class="workout-vid">
                             <video src="assets/videos/tuesday/squats.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Squats</p>
                         </div>
+
                     </div>
+
                 </div>
+
                 <hr>
                 <div class="wednesday">
                     <h3>Wednesday:</h3>
@@ -147,32 +159,39 @@
                             hips. Slide your butt off the chair and lower yourself so your elbows are bent at a 45- or
                             90-degree angle. Push yourself back to the starting position.</li>
                     </ul>
+
                     <div class="wednesday-videos">
+
                         <div class="workout-vid">
                             <video src="assets/videos/wednesday/bicep-curl.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Bicep Curl</p>
                         </div>
+
                         <div class="workout-vid">
                             <video src="assets/videos/wednesday/chest-press.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Chest Press</p>
                         </div>
+
                         <div class="workout-vid">
                             <video src="assets/videos/wednesday/tricep-dip.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Chest Press</p>
                         </div>
+
                     </div>
+
                     <p>Perform 10 reps of each exercise for three sets with one minute of rest in between each set.
                         Finish this session with a quick core circuit. Pick some of your core moves—such as crunches,
                         planks, and Russian twists—and do each one for 30 seconds with 10–15 seconds off. Repeat the
                         exercises until you hit 10–15 minutes.</p>
                 </div>
                 <hr>
+
                 <div class="thursday">
                     <h3>Thursday:</h3>
                     <h4>Active Rest and Recovery</h4>
@@ -185,6 +204,7 @@
                         rest might include walking and stretching, which relieves post-workout muscle tightness.</p>
                 </div>
                 <hr>
+
                 <div class="friday">
                     <h3>Friday:</h3>
                     <h4>Lower Body With a Focus on Glutes</h4>
@@ -195,15 +215,19 @@
                         reps for three sets of hinge movements, including deadlifts, hip thrusts, and single-legged hip
                         thrusts. Those exercises target your glutes and hamstrings.</p>
                     <div class="friday-videos">
+
                         <div class="workout-vid">
                             <video src="assets/videos/friday/resistant-band_wo-legs.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Leg strecth with resistance band and Squats</p>
                         </div>
+
                     </div>
+
                 </div>
                 <hr>
+
                 <div class="saturday">
                     <h3>Saturday:</h3>
                     <h4>Upper Body</h4>
@@ -234,7 +258,9 @@
                             starting position.
                         </li>
                     </ul>
+
                     <div class="saturday-videos">
+
                         <div class="workout-vid">
                             <video src="assets/videos/saturday/dumbbell-single-arm-row.mp4" controls autoplay muted
                                 loop>
@@ -242,27 +268,33 @@
                             </video>
                             <p>Dumbbell Single arm row</p>
                         </div>
+
                         <div class="workout-vid">
                             <video src="assets/videos/saturday/lat-pull-down.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Lat Pull down</p>
                         </div>
+
                         <div class="workout-vid">
                             <video src="assets/videos/saturday/lateral-raise.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Lateral raise</p>
                         </div>
+
                         <div class="workout-vid">
                             <video src="assets/videos/saturday/shoulder-press.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Shoulder Press</p>
                         </div>
+
                     </div>
+
                 </div>
                 <hr>
+
                 <div class="sunday">
                     <h3>Sunday:</h3>
                     <h4>Rest and Recovery Day</h4>
@@ -273,44 +305,53 @@
                         matters most is that you listen to your body.
                     </p>
                     <div class="sunday-videos">
+
                         <div class="workout-vid">
                             <video src="assets/videos/sunday/stretching.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>A form of stretching</p>
                         </div>
+
                         <div class="workout-vid">
                             <video src="assets/videos/sunday/yoga.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Yoga</p>
                         </div>
+
                     </div>
+
                 </div>
+
             </div>
+
         </Section>
+        
     </main>
 
     <!--Footer-->
     <footer>
         <p>"If it doesn't challenge you, it doesn't change you." <strong>FRED_DEVITO</strong></p>
+
         <section class="social-media">
             <h5 class="hide">Hidden</h5>
             <p>Follow Us</p>
+
             <ul class="social-networks">
-                <li><a href="https://x.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+                <li>
+                    <a href="https://x.com/" target="_blank" rel="noopener" aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
                 </li>
-                <li><a href="https://wwww.facebook.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our Facebook page (opens in a new tab)"><i
-                            class="fa-brands fa-facebook"></i></a>
+                <li>
+                    <a href="https://wwww.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
                 </li>
-                <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our instagram page (opens in a new tab)"><i
-                            class="fa-brands fa-instagram"></i></a>
+                <li>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
                 </li>
             </ul>
+            
         </section>
+
     </footer>
 
     <!-- Font Awesome kit -->
