--- a/responsive.html
+++ b/responsive.html
@@ -42,6 +42,7 @@
 
     <!--Main Content-->
     <main>
+
         <div class="responsive-content">
             <img src="assets/images/thank_you.webp" alt="Thank you image.">
             <br>
@@ -51,28 +52,31 @@
             <br>
             <a href="index.html">Return to home page</a>
         </div>
+        
     </main>
 
     <!--Footer-->
     <footer>
         <p>"If it doesn't challenge you, it doesn't change you." <strong>FRED_DEVITO</strong></p>
+
         <section class="social-media">
             <h5 class="hide">Hidden</h5>
             <p>Follow Us</p>
+
             <ul class="social-networks">
-                <li><a href="https://x.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+                <li>
+                    <a href="https://x.com/" target="_blank" rel="noopener" aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
                 </li>
-                <li><a href="https://wwww.facebook.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our Facebook page (opens in a new tab)"><i
-                            class="fa-brands fa-facebook"></i></a>
+                <li>
+                    <a href="https://wwww.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
                 </li>
-                <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our instagram page (opens in a new tab)"><i
-                            class="fa-brands fa-instagram"></i></a>
+                <li>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
                 </li>
             </ul>
+            
         </section>
+
     </footer>
 
     <!-- Font Awesome kit -->
