Group terms and conditions in one link

--- a/sign-up.html
+++ b/sign-up.html
@@ -115,7 +115,7 @@
                     </div>
 
                     <div class="note">
-                        <p>By clicking Send, you agree to our <a href="#">Terms</a> and <a href="#">Conditions</a>, <a
+                        <p>By clicking Send, you agree to our <a href="#">Terms and Conditions</a>, <a
                                 href="#">Privacy</a> and <a href="#">Cookies policy</a>. You may
                             receive notifications from us and you can choose to cancel this at any time.
                         </p>
@@ -133,7 +133,7 @@
             </form>
 
         </section>
-        
+
     </main>
 
     <!--Footer-->
