Remove step attribute from the age input

--- a/sign-up.html
+++ b/sign-up.html
@@ -67,7 +67,7 @@
 
                     <div class="user-input-box">
                         <label for="age">Age</label>
-                        <input type="number" name="age" placeholder="Age" step="2" min="18" max="99" id="age" class="input">
+                        <input type="number" name="age" placeholder="Age" min="18" max="99" id="age" class="input">
                     </div>
 
                     <div class="user-input-box">
