Manually format code

--- a/index.html
+++ b/index.html
@@ -53,91 +53,87 @@
             <h2>A beginner's guide to start working out</h2>
             <div class="workout-benefits">
                 <h2>Workout benefits</h2>
-
                 <div class="workout-pm-benefits">
                     <div class="physical-benefits">
-
                         <div class="pb-text">
                             <h3>Physical Benefits</h3>
                             <ul>
-                                <li>Regular exercise strengthens the heart and improves circulation, reducing the risk of heart disease and stroke.</li>
-                                <li>Physical activity helps control weight by burning calories and building muscle mass.</li>
-                                <li>Regular exercise is linked to a longer lifespan by reducing the risk of many chronic diseases.</li>
+                                <li>Regular exercise strengthens the heart and improves circulation, reducing the risk
+                                    of heart disease and stroke.</li>
+                                <li>Physical activity helps control weight by burning calories and building muscle mass.
+                                </li>
+                                <li>Regular exercise is linked to a longer lifespan by reducing the risk of many chronic
+                                    diseases.</li>
                             </ul>
                         </div>
-
                         <div class="pb-img">
                             <img src="assets/images/man_carrying_dumbbells.webp" alt="seated man carrying dumbbells"
                                 class="benefits-img">
                         </div>
-
                     </div>
 
                     <div class="mental-benefits">
-
                         <div class="mb-text">
                             <h3>Mental Benefits</h3>
                             <ul>
-                                <li>Physical activity stimulates the production of endorphins, which are natural mood lifters, reducing stress and anxiety levels.</li>
-                                <li>Exercise can help alleviate symptoms of depression and improve overall mood and well-being.</li>
-                                <li>Achieving fitness goals and improving physical appearance can enhance self-esteem and confidence.</li>
-                                <li>Physical activity helps develop mental toughness and resilience, which can be beneficial in dealing with life's challenges.
+                                <li>Physical activity stimulates the production of endorphins, which are natural mood
+                                    lifters, reducing stress and anxiety levels.</li>
+                                <li>Exercise can help alleviate symptoms of depression and improve overall mood and
+                                    well-being.</li>
+                                <li>Achieving fitness goals and improving physical appearance can enhance self-esteem
+                                    and confidence.</li>
+                                <li>Physical activity helps develop mental toughness and resilience, which can be
+                                    beneficial in dealing with life's challenges.
                                 </li>
                             </ul>
                         </div>
-
                         <div class="mb-img">
                             <img src="assets/images/woman_drinking_water_next_to_a_bike.webp"
                                 alt="woman drinking water next to a bike" class="benefits-img">
                         </div>
-
                     </div>
-
                 </div>
             </div>
-
             <div class="healthy-meals-benefits">
                 <h2>Benefits of healthy meals</h2>
                 <div class="healthy-meals-pm-benefits">
-
                     <div class="physical-benefits">
                         <div class="pb-text">
                             <h3>Physical benefits</h3>
                             <ul>
-                                <li>Improved Nutrition; Provides essential vitamins and minerals.Ensures a balanced intake of macronutrients (proteins, fats, carbohydrates).</li>
-                                <li>Weight Management; Helps maintain a healthy weight. Reduces the risk of obesity.</li>
-                                <li>Enhanced Immune Function; Lowers the risk of chronic diseases such as heart disease, diabetes, and cancer. Reduces blood pressure and cholesterol levels.</li>
+                                <li>Improved Nutrition; Provides essential vitamins and minerals.Ensures a balanced
+                                    intake of macronutrients (proteins, fats, carbohydrates).</li>
+                                <li>Weight Management; Helps maintain a healthy weight. Reduces the risk of obesity.
+                                </li>
+                                <li>Enhanced Immune Function; Lowers the risk of chronic diseases such as heart disease,
+                                    diabetes, and cancer. Reduces blood pressure and cholesterol levels.</li>
                             </ul>
                         </div>
-
                         <div class="pb-img">
                             <img src="assets/images/bowl_of_salad.webp" alt="a bowl of salad" class="benefits-img">
                         </div>
-
                     </div>
-
                     <div class="mental-benefits">
                         <div class="mb-text">
                             <h3>Mental benefits</h3>
                             <ul>
-                                <li>Improved Mood; Stabilizes blood sugar levels, reducing mood swings. Increases the production of serotonin, the “feel-good” hormone.</li>
-                                <li>Reduced Stress and Anxiety; Provides nutrients that support the nervous system. Helps balance hormones and reduce stress levels.</li>
-                                <li>Better Cognitive Function; Supports brain health and improves memory and concentration. Reduces the risk of cognitive decline and dementia.</li>
+                                <li>Improved Mood; Stabilizes blood sugar levels, reducing mood swings. Increases the
+                                    production of serotonin, the “feel-good” hormone.</li>
+                                <li>Reduced Stress and Anxiety; Provides nutrients that support the nervous system.
+                                    Helps balance hormones and reduce stress levels.</li>
+                                <li>Better Cognitive Function; Supports brain health and improves memory and
+                                    concentration. Reduces the risk of cognitive decline and dementia.</li>
                             </ul>
                         </div>
-
                         <div class="mb-img">
                             <img src="assets/images/lady_preparing_a_meal.webp" alt="a lady preparing a healthy meal"
                                 class="benefits-img">
                         </div>
-
                     </div>
-
                 </div>
-
             </div>
-
         </section>
+
     </main>
 
     <!--Footer-->
@@ -150,16 +146,21 @@
 
             <ul class="social-networks">
                 <li>
-                    <a href="https://x.com/" target="_blank" rel="noopener" aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://x.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
                 </li>
                 <li>
-                    <a href="https://wwww.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://wwww.facebook.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our Facebook page (opens in a new tab)"><i
+                            class="fa-brands fa-facebook"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our instagram page (opens in a new tab)"><i
+                            class="fa-brands fa-instagram"></i></a>
                 </li>
             </ul>
-            
+
         </section>
 
     </footer>
