--- a/workout-routines.html
+++ b/workout-routines.html
@@ -19,10 +19,10 @@
     <!--Header-->
     <header>
         <div class="logo">
-            <a href="index.html">
+            <a href="index.html" aria-label="Visit our home page">
                 <img src="assets/favicon/favicon.webp" alt="logo">
             </a>
-            <a href="index.html">
+            <a href="index.html" aria-label="Visit our home page">
                 <h1>Fit Lifestyle</h1>
             </a>
         </div>
@@ -31,19 +31,18 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="workout-routines.html" class="active">Workout Routines</a></li>
-                <li><a href="meal-preps.html">Meal Preps</a></li>
-                <li><a href="sign-up.html">Sign Up</a></li>
+                <li><a href="index.html" aria-label="Visit our home page">Home</a></li>
+                <li><a href="workout-routines.html" class="active" aria-label="Visit our workout routines page">Workout Routines</a></li>
+                <li><a href="meal-preps.html" aria-label="Visit our meal preps page">Meal Preps</a></li>
+                <li><a href="sign-up.html" aria-label="Visit our sign up page">Sign Up</a></li>
             </ul>
         </nav>
-
     </header>
 
     <!--Main Content-->
     <main>
 
-        <Section class="workout-routines">
+        <section class="workout-routines">
 
             <div>
                 <h2>Effective weekly workout routine</h2>
@@ -135,7 +134,6 @@
                             </video>
                             <p>Squats</p>
                         </div>
-
                     </div>
 
                 </div>
