Add aria-labels to a tags

--- a/meal-preps.html
+++ b/meal-preps.html
@@ -19,10 +19,10 @@
     <!--Header-->
     <header>
         <div class="logo">
-            <a href="index.html">
+            <a href="index.html" aria-label="Visit our home page">
                 <img src="assets/favicon/favicon.webp" alt="logo">
             </a>
-            <a href="index.html">
+            <a href="index.html" aria-label="Visit our home page">
                 <h1>Fit Lifestyle</h1>
             </a>
         </div>
@@ -31,13 +31,12 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="workout-routines.html">Workout Routines</a></li>
-                <li><a href="meal-preps.html" class="active">Meal Preps</a></li>
-                <li><a href="sign-up.html">Sign Up</a></li>
+                <li><a href="index.html" aria-label="Visit our home page">Home</a></li>
+                <li><a href="workout-routines.html" aria-label="Visit our workout routines page">Workout Routines</a></li>
+                <li><a href="meal-preps.html" class="active" aria-label="Visit our meal preps page">Meal Preps</a></li>
+                <li><a href="sign-up.html" aria-label="Visit our sign up page">Sign Up</a></li>
             </ul>
         </nav>
-
     </header>
 
     <!--Main Content-->
