Add aria-labels to a tags

--- a/responsive.html
+++ b/responsive.html
@@ -31,10 +31,10 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="workout-routines.html">Workout Routines</a></li>
-                <li><a href="meal-preps.html">Meal Preps</a></li>
-                <li><a href="sign-up.html" class="active">Sign Up</a></li>
+                <li><a href="index.html" aria-label="Visit our home page">Home</a></li>
+                <li><a href="workout-routines.html" aria-label="Visit our workout routines page">Workout Routines</a></li>
+                <li><a href="meal-preps.html" aria-label="Visit our meal preps page">Meal Preps</a></li>
+                <li><a href="sign-up.html" class="active" aria-label="Visit our sign up page">Sign Up</a></li>
             </ul>
         </nav>
 
@@ -50,7 +50,7 @@
             <br>
             <p>We are looking forward to start together your Fit Lifestyle!</p>
             <br>
-            <a href="index.html">Return to home page</a>
+            <a href="index.html" aria-label="Visit our home page">Return to home page</a>
         </div>
         
     </main>
