--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@
             </div>
         </section>
 
+        <!--Motivation Section-->
         <section class="motivation">
             <h2>A beginner's guide to start working out</h2>
             <div class="workout-benefits">
+
+                <!--Workout Benefits-->
                 <h2>Workout benefits</h2>
                 <div class="workout-pm-benefits">
                     <div class="physical-benefits">
@@ -93,6 +96,8 @@
                     </div>
                 </div>
             </div>
+
+            <!--Healthy Meals Benefits-->
             <div class="healthy-meals-benefits">
                 <h2>Benefits of healthy meals</h2>
                 <div class="healthy-meals-pm-benefits">
