--- a/workout-routines.html
+++ b/workout-routines.html
@@ -43,6 +43,7 @@
     <main>
 
         <section class="workout-routines">
+            <!--Workout Strategy and Routines-->
             <div>
                 <h2>Effective weekly workout routine</h2>
                 <p>You'll want to find a well-balanced workout routine you can stick to to reap the benefits of physical
@@ -57,7 +58,10 @@
                 <hr>
             </div>
 
+            <!--Weekdays-->
             <div class="weekdays">
+
+                <!--Monday Workout-->
                 <div class="monday">
                     <h3>Monday:</h3>
                     <h4>Cardio</h4>
@@ -75,6 +79,7 @@
                 </div>
                 <hr>
 
+                <!--Tuesday Workout-->
                 <div class="tuesday">
                     <h3>Tuesday:</h3>
                     <h4>Lower body</h4>
@@ -104,6 +109,7 @@
                             and your feet flat on the floor. Push back up to standing.</li>
                     </ul>
 
+                    <!--Tuesday workout videos-->
                     <div class="tuesday-videos">
 
                         <div class="workout-vid">
@@ -138,6 +144,8 @@
                 </div>
 
                 <hr>
+
+                <!--Wednesday Workout-->
                 <div class="wednesday">
                     <h3>Wednesday:</h3>
                     <h4>Upper Body and Core</h4>
@@ -157,6 +165,7 @@
                             90-degree angle. Push yourself back to the starting position.</li>
                     </ul>
 
+                    <!--Wednesday workout videos-->
                     <div class="wednesday-videos">
 
                         <div class="workout-vid">
@@ -189,6 +198,7 @@
                 </div>
                 <hr>
 
+                <!--Thursday Workout-->
                 <div class="thursday">
                     <h3>Thursday:</h3>
                     <h4>Active Rest and Recovery</h4>
@@ -202,6 +212,7 @@
                 </div>
                 <hr>
 
+                <!--Friday Workout-->
                 <div class="friday">
                     <h3>Friday:</h3>
                     <h4>Lower Body With a Focus on Glutes</h4>
@@ -213,6 +224,7 @@
                         thrusts. Those exercises target your glutes and hamstrings.</p>
                     <div class="friday-videos">
 
+                        <!--Friday workout video-->
                         <div class="workout-vid">
                             <video src="assets/videos/friday/resistant-band_wo-legs.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
@@ -225,6 +237,7 @@
                 </div>
                 <hr>
 
+                <!--Saturday Workout-->
                 <div class="saturday">
                     <h3>Saturday:</h3>
                     <h4>Upper Body</h4>
@@ -256,6 +269,7 @@
                         </li>
                     </ul>
 
+                    <!--Saturday workout videos-->
                     <div class="saturday-videos">
 
                         <div class="workout-vid">
@@ -292,6 +306,7 @@
                 </div>
                 <hr>
 
+                <!--Sunday workout-->
                 <div class="sunday">
                     <h3>Sunday:</h3>
                     <h4>Rest and Recovery Day</h4>
@@ -301,8 +316,9 @@
                         weekly routine, whether that's reading a book on the couch or catching up on Netflix. What
                         matters most is that you listen to your body.
                     </p>
-                    <div class="sunday-videos">
 
+                    <!--Sunday workout videos-->
+                    <div class="sunday-videos">
                         <div class="workout-vid">
                             <video src="assets/videos/sunday/stretching.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
@@ -319,7 +335,7 @@
                     </div>
                 </div>
             </div>
-            
+
         </Section>
         
     </main>
