--- a/meal-preps.html
+++ b/meal-preps.html
@@ -45,6 +45,7 @@
         <section class="meal-preps">
             <h2 class="hide">Hidden</h2>
 
+            <!--Why Eat Healthy Meals Section-->
             <section>
                 <h2>7 days of healthy meals on a budget</h2><br>
                 <p>Eating well is an important part of a healthy lifestyle. Consuming a balanced mix of nutritious foods
@@ -55,6 +56,7 @@
                     to control your spending. Amounts given are per person.</p><br>
             </section>
 
+            <!--Meal Prep Table-->
             <section class="meal-prep-table">
                 <h2 class="hide">Hidden</h2>
                 <table>
