--- a/sign-up.html
+++ b/sign-up.html
@@ -45,6 +45,7 @@
 
         <section class="signup-page">
 
+            <!--Form Area-->
             <form action="responsive.html" method="GET" class="signup-form">
                 <h2>Gym Membership Form</h2>
                 <h3>Start your Fit Lifestyle today!</h3>
